# model-training-pipeline

./: .gitignore  README.md  pyproject.toml
src/model_training_pipeline/: artifacts.py  data.py  eval.py  metrics.py  train.py  utils.py
tests/: test_metrics.py  test_splits.py
