[tool.poetry]
name = "model-training-pipeline"
version = "0.1.0"
description = "Reproducible model training + evaluation pipeline"
authors = ["Damir Perkosan <dperkosan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.8.0"
pyyaml = "^6.0.3"
joblib = "^1.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
mypy = "^1.19.1"
ruff = "^0.15.2"
types-pyyaml = "^6.0.12.20250915"
scikit-learn-stubs = "^0.0.3"

[tool.poetry.scripts]
train = "model_training_pipeline.train:main"
eval = "model_training_pipeline.eval:main"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
pretty = true
show_error_codes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
